HOLY CRAP this is a lot. Made products and industries their own landing pages and fixed the shift window function for each of them. Added icons to the industries page. Added an actual press release to the news section and home page and made it's own article page. I recon all thats left to do now is get the right content and work on the DistReps page.

--- a/Jstylesheet.css
+++ b/Jstylesheet.css
@@ -248,3 +248,7 @@ div.meetTeam:hover {
 .reps {
 	text-align: center;
 }
+
+h2.news {
+	margin-top: 10px;
+}
